testsuite/tests/parser/should_fail/cmdFail009.hs
{-# LANGUAGE Arrows #-}
module CmdFail009 where

f = proc x -> (_ -< _,
               _ -< _,
               _ -< _,
               _ -< _,
               _ -< _)
