testsuite/tests/parser/should_fail/cmdFail009.stderr

cmdFail009.hs:4:15: error:
    Parse error in command: (_ -< _,_ -< _,_ -< _,_ -< _,_ -< _)
